SB-208 - new api spec, models for CCW Jurisdiction
